# Chirag-clone

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  install_deps.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  testing.md  training.md
.github/workflows/: ci.yml  docker-publish.yml
backend/: .env  .env.example  COLLABORATION.md  README.md  alembic.ini  app.py  config.py  database.py  gunicorn.conf.py  main.py  requirements.txt
backend/data/: analytics.json  chirag.db  knowledge_metadata.json  personality_profile.json
backend/middleware/: security.py
backend/migrations/: env.py
backend/models/: validation.py
backend/parsers/: __init__.py  discord_parser.py  instagram_parser.py  smart_parser.py  whatsapp_parser.py
backend/routes/: __init__.py  agent.py  analytics_routes.py  auth.py  autopilot.py  autopilot_routes.py  chat.py  chat_routes.py  cognitive.py  dashboard.py  features.py  finetune.py  knowledge.py  knowledge_routes.py  local_training.py  proactive_routes.py  timeline_routes.py  training.py  training_routes.py  upload_routes.py  vision.py  visualization_routes.py  voice.py
backend/services/: __init__.py  accuracy_service.py  active_learning_service.py  analytics_service.py  async_cache.py  auth_service.py  (+55 more)
desktop-widget/: index.html  main.js  package.json  preload.js  renderer.js  styles.css
frontend/: index.html
frontend-react/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
tools/: train_lora.py
(+66 files in other folders)
